--- a/src/pages/posts/markdown-page.mdx
+++ b/src/pages/posts/markdown-page.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'Markdown + Tailwind'
-layout: ../layouts/main.astro
+layout: '@layouts/PostLayout.astro'
 ---
 
-import Button from '../components/Button.astro';
+import Button from '@components/Button.astro';
 
-<div class="grid place-items-center h-screen content-center">
+<div class="grid place-items-center content-center">
 	<Button>Tailwind Button in Markdown!</Button>
 	<a href="/" class="p-4 underline">
 		Go home...
