--- a/src/pages/posts/2025/02/07/2025-02-07.md
+++ b/src/pages/posts/2025/02/07/2025-02-07.md
@@ -1,12 +1,12 @@
 ---
 layout: '@layouts/PostLayout.astro'
-title: '解決電腦中毒驚魂記'
+title: '解決電腦中毒'
 pubDate: '2025-02-07'
 description: '很久沒有遇過電腦中毒...'
 author: 'Farma'
-# image:
-#     url: 'https://emmet.io/-/4076541266/i/logo.svg' 
-#     alt: 'Emmet'
+image:
+    url: '/assets/images/2025/02/07/robot_virus.png'
+    alt: 'Robot using computer with virus'
 ---
 
 ## 前言：很久沒有遇過電腦中毒
