--- a/src/pages/posts/2023/01/09/2023-01-09.md
+++ b/src/pages/posts/2023/01/09/2023-01-09.md
@@ -131,7 +131,9 @@ image:
 
 ## Attribute operators
 
-`abbr#anId.aClass[style=color:blue; title='Hypertext Markup Language']{HTML}`
+```
+abbr#anId.aClass[style=color:blue; title='Hypertext Markup Language']{HTML}
+```
 
 ```html
 <abbr
@@ -145,7 +147,9 @@ image:
 
 ### ID and CLASS
 
-`div#header+div.page+div#footer.class1.class2.class3`
+```
+div#header+div.page+div#footer.class1.class2.class3
+```
 
 ```html
 <div id="header"></div>
