feat: Add new blog posts, update image assets, and adjust base layout styling.

--- a/src/pages/posts/2023/01/09/2023-01-09.md
+++ b/src/pages/posts/2023/01/09/2023-01-09.md
@@ -5,8 +5,8 @@ pubDate: '2023-01-09'
 description: 'Emmet extension 是一個協助編寫 Html 或 CSS 語法的有力工具，透過範例來學習 Emmet 所支援的語法是最快上手的方式。'
 author: 'Farma'
 image:
-    url: 'https://emmet.io/-/4076541266/i/logo.svg' 
-    alt: 'Emmet'
+  url: '/assets/images/2023/01/09/emmet-svgrepo-com.svg'
+  alt: 'Emmet'
 ---
 
 # 透過範例學習 Emmet 語法
